add initial html, add images Co-authored by: Tanya Prado <tanyaprado@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Document</title>
+  <title>Kitchen Brigade</title>
 </head>
 <body>
-  
+  <h1>Kitchen Brigade</h1>
+  <h2>Select player type:</h2>
+  <img src="assets/images/dishwasher_mouse_wash_md_wht.gif">
+  <h3>Dishwasher</h3>
+  <img src="assets/images/waiter.gif">
+  <h3>Waiter</h3>
 
-<script src="bundle.js"></script>
+
 </body>
 </html>
